# Change Log
The format is based on [Keep a Changelog](http://keepachangelog.com/)

## [Unreleased]

## [v0.1.13] - Wed, 02 May 2018 16:11:49 +0900

### Changed
- 특정일 기준에 따라 의류착용일을 조정 (#201)

## [v0.1.12] - Thu, 22 Feb 2018 14:31:34 +0900

### Added
- 배송비가 무료인 쿠폰 타입을 지원 (#200)

## [v0.1.11] - Mon, 19 Feb 2018 16:13:20 +0900

### Changed
- 2018 취업날개지원 seoul-2017 대신에 seoul-2018 을 사용

## [v0.1.10] - Thu, 08 Feb 2018 18:10:17 +0900

### Changed
- 2018-02-15 ~ 2018-02-23 까지는 주문을 받지 않음 (#198)

## [v0.1.9] - Thu, 08 Feb 2018 18:00:35 +0900

### Changed
- 결제검증 데몬로그에 `[verify]` prefix 를 붙임 (#181)

## [v0.1.8] - Mon, 05 Feb 2018 21:30:39 +0900

### Added
- 결제오류에 대비하여 1시간마다 결제정보를 확인해서 상태를 변경하는 스크립트의 추가 (#181)

## [v0.1.7] - Wed, 31 Jan 2018 12:42:10 +0900

### Added
- 결제정보를 3번까지 재시도 해서 확인 (#181)
- 결제정보를 확인하지 못하면 잔디에 주문서 오류를 남김 (#181)

## [v0.1.6] - Mon, 11 Dec 2017 13:40:41 +0900

### Changed
- 의류착용일이 '2017-12-14' 까지만 2017년도 취업날개 쿠폰을 사용할 수 있도록 함 (#194)

## [v0.1.5] - Mon, 04 Dec 2017 17:26:34 +0900

### Added
- 관리자가 입금마감시간이 지난 주문서를 다시 결제할 수 있도록 함 (#182)

## [v0.1.4] - Fri, 24 Nov 2017 11:50:50 +0900

### Fixed
- 쿠폰 유효성 검증에 발생하는 주소 관련 오류 해결 (#189)

## [v0.1.3] - Thu, 23 Nov 2017 18:17:34 +0900

### Added
- 배송지가 서울시인 주문서만 취업날개는 쿠폰을 사용할 수 있도록 제한 (#187)

## [v0.1.2] - Thu, 23 Nov 2017 17:51:40 +0900

### Added
- POST /orders/:id/details
- 여러벌을 대여가능하도록 함 (#177)
- 주문서번호, 이름, 이메일, 휴대전화번호 로 주문서를 검색할 수 있도록 함 (#182)
- 입금마감시간을 무시하는 관리자용 버튼 추가 (#182)

## [v0.1.1] - Wed, 15 Nov 2017 17:33:47 +0900

### Fixed
- /orders/:id/purchase 에서 오래된 온라인 주문서를 볼때 오류가 나는 문제 해결 - 배송관련 정보가 없음 (#171)

### Changed
- 라운드 긴소매 블라우스 타입을 제거 (#174)
- 취업날개는 쿠폰은 입사면접 용도만을 허용 (#178)
- 결제완료 마감시간을 오전 10시에서 오전 09시로 변경 (#173)
- 2017년 추석물류 배송과 관련된 안내메세지 제거 (#163)

## [v0.1.0] - Thu, 02 Nov 2017 16:23:10 +0900

### Added
- configurable avatar and postcodify URI

## [v0.0.26] - Tue, 24 Oct 2017 16:46:36 +0900

### Added
- Dockerfiles

### Fixed
- 결제정보를 현재 로그인한 사용자가 아닌 주문서 사용자 정보로 수정 (#166)
