@@ -3,6 +3,9 @@ The format is based on [Keep a Changelog](http://keepachangelog.com/)
 
 ## [Unreleased]
 
+### Added
+- travis-ci 에서 docker image 를 build
+
 ## [v0.1.13] - Wed, 02 May 2018 16:11:49 +0900
 
 ### Changed
